--- a/app/views/jobs/new.html.erb
+++ b/app/views/jobs/new.html.erb
@@ -1,15 +1,32 @@
 <h1>Add a new job!</h1>
 
-<%= form_for @job do |f| %>
-  <div>
-     <%= f.label :title %>
-     <%= f.text_field :title %>
-   </div>
-   <div>
-     <%= f.label :description %>
-     <%= f.text_area :description, size: '60x6' %>
-   </div>
-   <div>
-     <%= f.submit %>
-   </div>
-<% end %>
+<div class="row">
+  <div class="col-xs-12">
+    <%= form_for(@job, :html => {class: "form-horizontal", role: "form"}) do |f| %>
+    <div class="form-group">
+      <div class="contol-label col-sm-2">
+        <%= f.label :title %>
+      </div>
+      <div class="col-sm-8">
+        <%= f.text_field :title, class: "form-control", placeholder: "Job Title", autofocus: true %>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="contol-label col-sm-2">
+        <%= f.label :description %>
+      </div>
+      <div class="col-sm-8">
+        <%= f.text_area :description, rows: 10, class: "form-control", placeholder: "Job Description" %>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="col-sm-offset-2 col-sm-10">
+        <%= f.submit class: 'btn btn-primary btn-lg' %>
+      </div>
+    </div>
+    <% end %>
+    <div class="col-xs-4 col-xs-offset-4">
+
+  </div>
+  </div>
+</div>
